fix: adjust layout and spacing in index.html and update tailwind.css with new utility classes

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -598,6 +598,22 @@ video {
   top: 1.25rem;
 }
 
+.left-\[5vw\] {
+  left: 5vw;
+}
+
+.left-\[5lvw\] {
+  left: 5lvw;
+}
+
+.left-\[3lvw\] {
+  left: 3lvw;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
 .z-\[-1\] {
   z-index: -1;
 }
@@ -626,6 +642,34 @@ video {
   margin: 0px;
 }
 
+.-ml-7 {
+  margin-left: -1.75rem;
+}
+
+.-ml-80 {
+  margin-left: -20rem;
+}
+
+.-ml-60 {
+  margin-left: -15rem;
+}
+
+.-ml-52 {
+  margin-left: -13rem;
+}
+
+.-ml-32 {
+  margin-left: -8rem;
+}
+
+.-ml-24 {
+  margin-left: -6rem;
+}
+
+.-ml-20 {
+  margin-left: -5rem;
+}
+
 .line-clamp-6 {
   overflow: hidden;
   display: -webkit-box;
@@ -640,8 +684,16 @@ video {
   -webkit-line-clamp: 1;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
+}
+
+.aspect-square {
+  aspect-ratio: 1 / 1;
 }
 
 .h-full {
@@ -678,6 +730,48 @@ video {
 
 .h-\[20lvw\] {
   height: 20lvw;
+}
+
+.h-\[40lvh\] {
+  height: 40lvh;
+}
+
+.h-\[50lvh\] {
+  height: 50lvh;
+}
+
+.h-\[70lvh\] {
+  height: 70lvh;
+}
+
+.h-\[60lvh\] {
+  height: 60lvh;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-1\/2 {
+  height: 50%;
+}
+
+.h-1\/3 {
+  height: 33.333333%;
 }
 
 .w-0\.5 {
@@ -724,12 +818,59 @@ video {
   width: 20lvw;
 }
 
+.w-\[0\.5px\] {
+  width: 0.5px;
+}
+
+.w-\[0\.1px\] {
+  width: 0.1px;
+}
+
+.w-\[0px\] {
+  width: 0px;
+}
+
+.w-\[\.8px\] {
+  width: .8px;
+}
+
+.w-\[8px\] {
+  width: 8px;
+}
+
+.w-\[\.5px\] {
+  width: .5px;
+}
+
 .grow {
   flex-grow: 1;
 }
 
 .basis-0 {
   flex-basis: 0px;
+}
+
+.rotate-90 {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-180 {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-90 {
+  --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .content-center {
@@ -778,6 +919,18 @@ video {
 
 .justify-items-center {
   justify-items: center;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .truncate {
@@ -845,6 +998,21 @@ video {
   background-color: rgb(18 18 18 / var(--tw-bg-opacity, 1));
 }
 
+.bg-light {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
+}
+
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 224 188 / var(--tw-bg-opacity, 1));
+}
+
+.bg-yellow-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity, 1));
+}
+
 .p-11 {
   padding: 2.75rem;
 }
@@ -864,6 +1032,21 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.px-px {
+  padding-left: 1px;
+  padding-right: 1px;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .ps-20 {
@@ -896,6 +1079,14 @@ video {
 
 .font-sans {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-9xl {
@@ -971,8 +1162,39 @@ video {
   font-size: 2vw;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .font-black {
   font-weight: 900;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+.font-extralight {
+  font-weight: 200;
 }
 
 .text-light {
